remove carriage return in fsharp template